<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/triggerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/delay_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/delay_hours"
                android:text="@string/hours_label" />

            <EditText
                android:id="@+id/delay_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/delay_minutes"
                android:text="@string/minutes_label" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneTimeTriggerHeader" />

        <Spinner
            android:id="@+id/eventTrigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <ImageView
        android:contentDescription="@string/remove"
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        app:tint="?attr/colorSecondary" />

    <View
        app:layout_constraintTop_toBottomOf="@+id/triggerLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>