<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intervalHeader"
                android:textSize="12pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/hours"
                    android:text="@string/hours_label"
                    android:textSize="10pt" />

                <EditText
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/minutes"
                    android:text="@string/minutes_label" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startingScheduleHeader" />

            <RadioGroup
                android:id="@+id/initialCondition"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:checkedButton="@+id/trigger"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/at_a_specific_time"
                    android:textColor="@color/toggle_widget_text"
                    android:textSize="7pt" />

                <RadioButton
                    android:id="@+id/trigger"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/after_an_event"
                    android:textColor="@color/toggle_widget_text"
                    android:textSize="7pt" />
            </RadioGroup>

            <TimePicker
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/triggerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/delay_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@+id/delay_hours"
                        android:text="@string/hours_label" />

                    <EditText
                        android:id="@+id/delay_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:labelFor="@+id/delay_minutes"
                        android:text="@string/minutes_label" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triggerHeader" />

                <Spinner
                    android:id="@+id/eventTrigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/remove"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            app:tint="?attr/colorSecondary" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>