<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.newintervention.NewInterventionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HealthTrack.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.HealthTrack.PopupOverlay">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_baseline_save_24"
                android:text="@string/save" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <EditText
            android:id="@+id/editInterventionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/interventionNameHint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/editInterventionName">

            <TextView
                android:id="@+id/schedulesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/schedules" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/schedulesLabel"
                android:background="?attr/colorSecondaryVariant" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/schedulesLabel"
                android:background="?attr/colorSecondaryVariant" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedulesRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/addSchedule"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <ImageButton
            android:id="@+id/addSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="?attr/colorAccent"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>